Se separa el microservicio en un repositorio individual.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import=optional:file:.env[.properties]
 spring.jpa.database=POSTGRESQL
 
 # ===============================
@@ -6,13 +7,26 @@ spring.jpa.database=POSTGRESQL
 # Set here configurations for the database connection
 
 # Conexion
-spring.datasource.url=jdbc:postgresql://localhost:5432/interpackage_notifications
-spring.datasource.username=postgres
-spring.datasource.password=mesi
+spring.datasource.url=${DB_URL}${DB_NOTIFICATION}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# ===============================
+# = KAFKA
+# ===============================
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=email
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.topic.name=user_topics
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
 # PUERTO
-server.port=8080
+server.port: 8082
 
 # ===============================
 # = JPA / HIBERNATE
