--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,8 @@
 			<groupId>com.interpackage</groupId>
 			<artifactId>base-domains</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/base-domains.jar</systemPath>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
