--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,12 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=interpackagegt@gmail.com
+spring.mail.password=cdpwlusuoehldngb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
