--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,15 @@ spring.kafka.topic.name=user_topics
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+
+# Nombre de la aplicación
+spring.application.name=notification-microservice
+
 # PUERTO
 server.port: 8084
-
+# Configuracion Eureka
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+spring.cloud.gateway.discovery.locator.enabled=true
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
