--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,8 @@ spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apac
 
 #KAFKA TOPICS
 spring.kafka.topic.invoice.notification.name=invoice_noti_topics
+spring.kafka.topic.invoice.notification.name=invoice_noti_topics
+spring.kafka.topic.order.notification.status.name=update_order_topics
 
 # Nombre de la aplicación
 spring.application.name=notification-microservice
