--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,16 +13,28 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ===============================
-# = KAFKA
+# = KAFKA - CONSUMER
 # ===============================
 spring.kafka.consumer.bootstrap-servers=localhost:9092
+
+# Group id's
 spring.kafka.consumer.group-id=user
 spring.kafka.email-consumer.group-id=email
+spring.kafka.route-notifications.consumer.group-id=route_notifications
+spring.kafka.tracking-notifications.consumer.group-id=tracking_notifications_mail
+spring.kafka.qr-notifications.group-id=qr_notifications
+
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+# Topic Names
 spring.kafka.topic.name=user_topics
+spring.kafka.route-topic-notification.name=route_notification_topics
+spring.kafka.tracking.name=tracking_order_topics
+spring.kafka.qr-topic.name=qr_topics
+
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
